fixed images path issue

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="container-fluid">
           <div class="navbar-header">
             <a class="navbar-brand" href="#">
-              <img src="/images/logo.png" alt="logo" style="width:40px;" />
+              <img src="images/logo.png" alt="logo" style="width:40px;" />
               <span>Renvies</span></a
             >
           </div>
@@ -67,7 +67,7 @@
       <div class="container-fluid">
         <div class="featured row ">
           <h1 class=" col-sm-12 display-4">FEATURED</h1>
-          <div class=" col-sm-4 ">
+          <div class=" col-sm-12 col-md-6 col-lg-4">
             <div class="featured-1">
               <img
                 class="img-fluid"
@@ -97,7 +97,7 @@
             </div>
           </div>
 
-          <div class=" col-sm-4">
+          <div class=" col-sm-12 col-md-6 col-lg-4">
             <div class="featured-2">
               <img
                 class="img-fluid"
@@ -127,11 +127,11 @@
             </div>
           </div>
 
-          <div class="col-sm-4 ">
+          <div class="col-sm-12 col-md-6 col-lg-4 ">
             <div class="featured-2" href="#">
               <img
                 class="img-fluid high"
-                src="/images/merry-men-790x790.jpg"
+                src="images/merry-men-790x790.jpg"
                 alt="merry men"
               />
               <div class="artical-info">
@@ -157,7 +157,7 @@
               <div class="clearfix"></div>
             </div>
             <div class="featured-3">
-              <img class="img-fluid" src="/images/Knockout-.jpg" />
+              <img class="img-fluid" src="images/Knockout-.jpg" />
               <div class="artical-info">
                 <p><strong>Title:</strong> Merry Men</p>
                 <p><strong>Director:</strong> Genevieve Nnaji</p>
@@ -185,7 +185,7 @@
           <h3 class="display-4">Trending Now</h3>
           <div class="row">
             <div class="movie col-sm-10 col-md-3 col-lg-2 mr-6">
-              <img src="/images/knockout.jpg" class=" img-fluid" />
+              <img src="images/knockout.jpg" class=" img-fluid" />
               <div class="artical-info">
                 <p><strong>Title:</strong> Merry Men</p>
                 <p><strong>Director:</strong> Genevieve Nnaji</p>
@@ -208,7 +208,7 @@
             </div>
 
             <div class="movie col-sm-10 col-md-3 col-lg-2 mr-6 ">
-              <img src="/images/JUMBLEPOS.jpg" class=" img-fluid" />
+              <img src="images/JUMBLEPOS.jpg" class=" img-fluid" />
               <div class="artical-info">
                 <p><strong>Title:</strong> Merry Men</p>
                 <p><strong>Director:</strong> Genevieve Nnaji</p>
@@ -231,7 +231,7 @@
             </div>
 
             <div class="movie col-sm-10 col-md-3 col-lg-2 ">
-              <img src="/images/the_alter_date.jpg" class=" img-fluid" />
+              <img src="images/the_alter_date.jpg" class=" img-fluid" />
               <div class="artical-info">
                 <p><strong>Title:</strong> Merry Men</p>
                 <p><strong>Director:</strong> Genevieve Nnaji</p>
@@ -254,7 +254,7 @@
             </div>
 
             <div class="movie col-sm-10 col-md-3 col-lg-2">
-              <img src="/images/chief-daddy.jpg" class=" img-fluid" />
+              <img src="images/chief-daddy.jpg" class=" img-fluid" />
               <div class="artical-info">
                 <p><strong>Title:</strong> Merry Men</p>
                 <p><strong>Director:</strong> Genevieve Nnaji</p>
@@ -277,7 +277,7 @@
             </div>
 
             <div class="movie col-sm-10 col-lg-2 ">
-              <img src="/images/lion-heart.jpg" class=" img-fluid" />
+              <img src="images/lion-heart.jpg" class=" img-fluid" />
               <div class="artical-info">
                 <p><strong>Title:</strong> Merry Men</p>
                 <p><strong>Director:</strong> Genevieve Nnaji</p>
@@ -310,7 +310,7 @@
           <h3 class="display-4">New Releases</h3>
           <div class="row">
             <div class="movie col-sm-3 mr-6 ">
-              <img src="/images/zena.jpg" class="img-fluid" />
+              <img src="images/zena.jpg" class="img-fluid" />
               <div class="artical-info">
                 <p><strong>Title:</strong> Merry Men</p>
                 <p><strong>Director:</strong> Genevieve Nnaji</p>
@@ -332,7 +332,7 @@
               </div>
             </div>
             <div class="movie col-sm-3  ">
-              <img src="/images/knockout.jpg" class=" img-fluid" />
+              <img src="images/knockout.jpg" class=" img-fluid" />
               <div class="artical-info">
                 <p><strong>Title:</strong> Merry Men</p>
                 <p><strong>Director:</strong> Genevieve Nnaji</p>
@@ -355,7 +355,7 @@
             </div>
 
             <div class="movie col-sm-3  ">
-              <img src="/images/night_bus_to_lagos.jpg" class=" img-fluid" />
+              <img src="images/night_bus_to_lagos.jpg" class=" img-fluid" />
               <div class="artical-info">
                 <p><strong>Title:</strong> Merry Men</p>
                 <p><strong>Director:</strong> Genevieve Nnaji</p>
@@ -393,7 +393,7 @@
             <figure class="figure">
               <img
                 class="col-sm-12 "
-                src="/images/love_or_quest.jpg"
+                src="images/love_or_quest.jpg"
                 alt="Zena"
                 class="figure"
               />
@@ -426,7 +426,7 @@
             <figure class="figure">
               <img
                 class="col-sm-12 "
-                src="/images/clustered-colours.jpg"
+                src="images/clustered-colours.jpg"
                 alt="Zena"
                 class="figure"
               />
@@ -475,20 +475,20 @@
             </h3>
             <div class="links">
               <img
-                src="/images/Download_on_the_App_Store.png"
+                src="images/Download_on_the_App_Store.png"
                 alt="App store badge"
                 class="img"
               />
 
               <img
-                src="/images/google-play-badge.png"
+                src="images/google-play-badge.png"
                 alt="Google play badge"
                 class="img"
               />
             </div>
           </div>
           <div class="col-sm-3">
-            <img class="img" src="/images/mobile-app.png" alt="Renvies App" />
+            <img class="img" src="images/mobile-app.png" alt="Renvies App" />
           </div>
         </div>
       </div>
@@ -500,7 +500,7 @@
 
         <div class="row">
           <div class="col-md-12 py-5">
-            <div class="mb-5 flex-center">
+            <div class="icons mb-5 flex-center">
               <a class="fb-ic">
                 <i
                   class="fab fa-facebook-f fa-lg white-text mr-md-5 mr-3 fa-2x"
@@ -572,6 +572,6 @@
       </div>
     </footer>
 
-    <script src="/main.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
